Fix error text-align

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -334,6 +334,7 @@
 
 @media only screen and (max-width: 600px) {
   .menu__error {
+    text-align: center;
     font-size: 1.25rem;
   }
 }
